--- a/templates/seller_add_product.html
+++ b/templates/seller_add_product.html
@@ -34,6 +34,27 @@
         h1 {
             text-align: center;
         }
+
+        .button {
+            background-color: #0d6efd;
+            color: white;
+            border: none;
+            padding: 10px 18px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        .button-link {
+            display: inline-block;
+            margin-left: 10px;
+            text-decoration: none;
+            color: #0d6efd;
+        }
+
+        .button:hover {
+            background-color: #0b5ed7;
+        }
     </style>
 </head>
 <body>
@@ -74,7 +95,7 @@
                 </div>
 
                 <button type="submit" class="button">Ürünü Ekle</button>
-                <a href="{{ url_for('seller_products') }}" class="button-link">Geri Dön</a>
+                <a href="{{ url_for('seller_products_view') }}" class="button-link">Geri Dön</a>
             </form>
         </div>
     </div>
